--- a/Musicio.Client.Web/wwwroot/css/site.css
+++ b/Musicio.Client.Web/wwwroot/css/site.css
@@ -324,3 +324,22 @@ h2 {
     align-items: center;
     flex-grow: 1;
 }
+
+/*Scroll bar*/
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #34495e;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #243342;
+}
